Fixing background color on mobile nav

--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -70,6 +70,11 @@ h1, h2, h3 {
       }
     }
   }
+  .navbar-collapse {
+    &.in, &.collapsing {
+      background-color: $bluegreen;
+    }
+  }
 }
 
 .agenda {
